fixade overflow av dropdown i css

--- a/public/main.less
+++ b/public/main.less
@@ -64,3 +64,13 @@ div.light-blue-background
 {
   background-color: #C5E7FF;
 }
+
+.searchPanel {
+  width: 100%;
+  float: left;
+  position: relative; /* <-- added declaration */
+}
+
+.searchPanel ul {
+  position: absolute;  /* <-- added declarations */
+}
